[metadata]
name = hypothesis_protobuf
url = https://github.com/Julian/hypothesis-protobuf
description = "Hypothesis strategies for Google Protocol Buffers"
long_description = file: README.rst
author = "Julian Berman"
author_email = "Julian@GrayVines.com"
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm

[flake8]
exclude = hypothesis_protobuf/__init__.py
